--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 <section id="welcome-section" class="welcome-section">
   <h1>Hey, I am Alex</h1>
-  <p>a Full Stack developer</p>
+  <p>a Software Developer</p>
 </section>
 
 <!-- END WELCOME SECTION -->
