--- a/index.html
+++ b/index.html
@@ -49,9 +49,12 @@
 <section id="projects" class="projects-section">
   <h2 class="projects-section-header">These are some of my projects</h2>
 
+  <section> 
+    <h3 class="projects-group-header">Responsive Web Design (HTML and CSS)</h3>
+  </section>
   <div class="projects-grid">
     <a
-      href="https://example.com"
+      href="https://tribute.alexdumitru.dev"
       target="_blank"
       class="project project-tile"
     >
@@ -148,12 +151,6 @@
     </a>
   </div>
 
-  <a
-    href="https://example.com"
-    class="btn btn-show-all"
-    target="_blank"
-    >Show all<i class="fas fa-chevron-right"></i
-  ></a>
 </section>
 
 <!-- END PROJECTS SECTION -->
